--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
-    
+    "start": "nodemon index.js",
+    "build":"npm i"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
